Fixed extra margin error. Mobile font size was too large. Text with no breaks like judy's email was causing extra space.

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h5, h6{
   }
 
   a, p{
-    font-size: 30px;
+    font-size: 25px;
   }
 
 }
@@ -159,6 +159,24 @@ hr.bottom-break{
 .fb-resize{
 	max-height: 100%;
 	max-width: 100%;
+}
+
+.fa-mobile{
+  display: none;
+}
+
+.fa-facebook-official{
+  color: #3b5998;
+}
+
+@media only screen and (max-width : 992px) {
+  .fb-resize{
+    display: none;
+  }
+
+  .fb-mobile{
+    display: block;
+  }
 }
 
 ul{
